<?xml version="1.0"?>
<package>
  <name>hls_lfcd_lds_driver</name>
  <version>0.1.4</version>
  <description>
    ROS package for LDS(HLS-LFCD2).
    The LDS (Laser Distance Sensor) is a sensor sending the data to Host for the simultaneous localization and mapping (SLAM). Simultaneously the detecting obstacle data can also be sent to Host. HLDS(Hitachi-LG Data Storage) is developing the technology for the moving platform sensor such as Robot Vacuum Cleaners, Home Robot, Robotics Lawn Mower Sensor, etc.
  </description>
  <license>BSD</license>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="pyo@robotis.com">Pyo</author>
  <author email="jhyang@hlds.co.kr">JH Yang</author>
  <author email="ksp123@hlds.co.kr">SP Kong</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/hls_lfcd_lds_driver/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/hls_lfcd_lds_driver</url>
  <url type="website">http://wiki.ros.org/hls_lfcd_lds_driver</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>boost</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <export></export>
</package>
