<?xml version="1.0"?>
<package format="2">
  <name>hls_lfcd_lds_driver</name>
  <version>1.1.0</version>
  <description>
    ROS package for LDS(HLS-LFCD2).
    The LDS (Laser Distance Sensor) is a sensor sending the data to Host for the simultaneous localization and mapping (SLAM). Simultaneously the detecting obstacle data can also be sent to Host. HLDS(Hitachi-LG Data Storage) is developing the technology for the moving platform sensor such as Robot Vacuum Cleaners, Home Robot, Robotics Lawn Mower Sensor, etc.
  </description>
  <license>BSD</license>
  <author email="pyo@robotis.com">Pyo</author>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="kkjong@robotis.com">Gilbert</author>
  <author>JH Yang</author>
  <author>SP Kong</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <maintainer email="kkjong@robotis.com">Gilbert</maintainer>
  <url type="website">http://wiki.ros.org/hls_lfcd_lds_driver</url>
  <url type="emanual">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/hls_lfcd_lds_driver</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/hls_lfcd_lds_driver/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>boost</depend>
</package>
