<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hls_lfcd_lds_driver</name>
  <version>2.0.5</version>
  <description>
    ROS package for LDS(HLS-LFCD2).
    The LDS (Laser Distance Sensor) is a sensor sending the data to Host for the simultaneous localization and mapping (SLAM). Simultaneously the detecting obstacle data can also be sent to Host. HLDS(Hitachi-LG Data Storage) is developing the technology for the moving platform sensor such as Robot Vacuum Cleaners, Home Robot, Robotics Lawn Mower Sensor, etc.
  </description>
  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/hls_lfcd_lds_driver</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/hls_lfcd_lds_driver</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/hls_lfcd_lds_driver/issues</url>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="pyo@robotis.com">Pyo</author>
  <author>JH Yang</author>
  <author>SP Kong</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>libboost-system-dev</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
